postgresql-common (133) UNRELEASED; urgency=low

  [ Christoph Berg ]
  * Add .bzrignore file.
  * PgCommon.pm: Check IPv4 and IPv6 in next_free_port(). (Closes: #678858)

  [ Peter Eisentraut ]
  * debian/control: Add myself to Uploaders.
  * debian/postgresql-common.lintian-overrides: Remove unused
    binary-without-manpage overrides (files were moved to
    postgresql-client-common package).

 -- Peter Eisentraut <petere@debian.org>  Sat, 21 Jul 2012 23:38:26 +0300

postgresql-common (132) unstable; urgency=low

  [ Martin Pitt ]
  * debian/control: Add XS-Testsuite: header, as per current DEP-8.
  * debian/tests/control: Drop undefined "no-build-needed" feature.

  [ Christoph Berg ]
  * Recognize "online,recovery" clusters in init script. (Closes: #678936)
    Spotted by Gilbert Roulot.

 -- Christoph Berg <myon@debian.org>  Sat, 30 Jun 2012 21:31:49 +0200

postgresql-common (131) unstable; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Adjust for lucid, build -9.2 for oneiric as well.
  * debian/control: Move bzr branches to alioth, so that other members of
    pkg-postgresql can commit. Update Vcs-* tags.
  * debian/control: Set Maintainer: to pkg-postgresql group, and move myself
    to Uploaders:.
  * debian/README.Devel: Update for moved packaging branches.
  * debian/backport-ppa: Disable dpkg 1.16.2 build dependency for natty as
    well.
  * debian/tests/control: Drop "breaks-computer" restriction. While DEP-8
    mentions it, autopkgtest does not understand it yet and skips the test.
  * debian/tests/system: Run testsuite under en_US.UTF-8, as autopkgtests sets
    it to C by default.
  * t/180_ecpg.t: Ensure that test.pgc is readable for nobody.
  * debian/tests/system: Run the packaged tests instead of the ones in the
    local build tree.
  * debian/tests/system: Unset $TMPDIR so that 'postgres' and 'nobody' do not
    fall over the autopkgtest provided $TMPDIR which is not world writable.