@@ -12,9 +12,9 @@ DEFAULT_VER=$(shell debian/supported-versions | sort -r | head -n 1)
 override_dh_install:
 	dh_install
 	install -m 644 -D debian/postgresql-common.sysctl debian/postgresql-common/etc/sysctl.d/30-postgresql-shm.conf
-	for p in $(POD1PROGS); do $(POD2MAN) --quotes=none --section 1 $$p > $$p.1; done
-	for p in $(POD1PROGS_POD); do $(POD2MAN) --quotes=none --section 1 $$p.pod > $$p.1; done
-	for p in $(POD8PROGS); do $(POD2MAN) --quotes=none --section 8 $$p > $$p.8; done
+	for p in $(POD1PROGS); do $(POD2MAN) --quotes=none --section 1 $$p > $$p.1 || exit; done
+	for p in $(POD1PROGS_POD); do $(POD2MAN) --quotes=none --section 1 $$p.pod > $$p.1 || exit; done
+	for p in $(POD8PROGS); do $(POD2MAN) --quotes=none --section 8 $$p > $$p.8 || exit; done
 
 override_dh_installinit:
 	dh_installinit --name=postgresql -u'defaults 19 21' -r
@@ -47,5 +47,5 @@ override_dh_installlogrotate:
 
 override_dh_clean:
 	dh_clean
-	for p in $(POD1PROGS) $(POD1PROGS_POD); do rm -f $$p.1; done
-	for p in $(POD8PROGS); do rm -f $$p.8; done
+	for p in $(POD1PROGS) $(POD1PROGS_POD); do rm -f $$p.1 || exit; done
+	for p in $(POD8PROGS); do rm -f $$p.8 || exit; done
