@@ -9,8 +9,9 @@ postgresql-common (133) UNRELEASED; urgency=low
   * debian/postgresql-common.lintian-overrides: Remove unused
     binary-without-manpage overrides (files were moved to
     postgresql-client-common package).
+  * debian/rules: Catch errors in for loops.
 
- -- Peter Eisentraut <petere@debian.org>  Sat, 21 Jul 2012 23:38:26 +0300
+ -- Peter Eisentraut <petere@debian.org>  Mon, 23 Jul 2012 22:42:45 +0300
 
 postgresql-common (132) unstable; urgency=low
 
